@@ -1045,10 +1045,6 @@ mail.add_x_header = On
 ; Log mail to syslog (Event Log on Windows).
 ;mail.log = syslog
 
-[SQL]
-; http://php.net/sql.safe-mode
-sql.safe_mode = Off
-
 [ODBC]
 ; http://php.net/odbc.default-db
 ;odbc.default_db    =  Not yet implemented
